--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <a href="index.html">الرئيسية</a>
             <a href="#">عن التطبيق</a>
             <a href="#">تلقين السور</a>
-            <a href="#">تصفح المصحف</a>
+            <a href="./quran.html">تصفح المصحف</a>
             <a href="Important links/index.html">روابط مهمّة</a>
         </nav>
     </header>
