--- a/quran.html
+++ b/quran.html
@@ -4,9 +4,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>المصحف الشريف</title>
+  <link href="https://fonts.googleapis.com/css2?family=Amiri+Quran&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: 'Arial', sans-serif;
+      font-family: 'Amiri Quran', serif;
       background-color: #f1f1f1;
       direction: rtl;
       text-align: right;
@@ -24,10 +25,10 @@
       position: relative;
     }
 
-    .dark-toggle {
-      position: absolute;
-      left: 15px;
-      top: 15px;
+    .dark-toggle, .home-btn {
+      position: relative;
+      left: auto;
+      top: auto;
       background-color: #444;
       color: white;
       border: none;
@@ -36,6 +37,10 @@
       cursor: pointer;
       font-size: 16px;
     }
+
+    .home-btn {
+        background: #4CAF50;
+      }
 
     .container {
       padding: 20px;
@@ -120,7 +125,7 @@
         font-size: 20px;
         padding: 16px;
       }
-      .dark-toggle {
+      .dark-toggle, .home-btn {
         font-size: 14px;
         padding: 5px 10px;
       }
@@ -146,9 +151,9 @@
   <header>
     المصحف الشريف
     <button class="dark-toggle" onclick="toggleDarkMode()">🌙</button>
+    <button class="home-btn" onclick="goHome()">🏠</button>
   </header>
   <div class="container">
-    <input type="text" id="searchInput" placeholder="ابحث عن كلمة أو آية..." />
     <select id="surahSelect">
       <option value="">-- اختر السورة --</option>
     </select>
@@ -172,7 +177,6 @@
     ];
 
     const surahSelect = document.getElementById('surahSelect');
-    const searchInput = document.getElementById('searchInput');
     const ayahContainer = document.getElementById('ayahContainer');
     const surahTitle = document.getElementById('surahTitle');
     let allAyat = [];
@@ -219,13 +223,6 @@
       setTimeout(() => btn.textContent = 'نسخ', 1000);
     }
 
-    searchInput.addEventListener('input', () => {
-      const q = searchInput.value.trim();
-      const filtered = allAyat.filter(a => a.ayah.includes(q));
-      surahTitle.textContent = q ? `نتائج البحث عن: \"${q}\"` : '';
-      displayAyat(filtered);
-    });
-
     surahSelect.addEventListener('change', () => {
       const val = surahSelect.value;
       if (val === '') {
@@ -243,6 +240,13 @@
     function toggleDarkMode() {
       document.body.classList.toggle('dark-mode');
     }
+
+    function removeDiacritics(text) {
+      return text.normalize('NFD').replace(/[\u064B-\u065F\u0610-\u061A]/g, '').replace(/[\u0640]/g, '');
+    }
+    function goHome() {
+            window.location.href = "./index.html"; // الصفحة الرئيسية
+        }
   </script>
 </body>
 </html>
