--- a/audio/1_ap/assanawat.html
+++ b/audio/1_ap/assanawat.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="./../images/logo.png" alt="شعار الموقع">
+            <img src="./../../images/logo.png" alt="شعار الموقع">
             <h1 class="quran-title">تلقين القرآن الكريم</h1>
         </div>
         
