--- a/audio/1_ap/suwar/suwarsanaoula.html
+++ b/audio/1_ap/suwar/suwarsanaoula.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>السور</title>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="./../../../style.css">
 
     <style>
         .container-end {
