--- a/audio/1_ap/suwar/suwarsanaoula.html
+++ b/audio/1_ap/suwar/suwarsanaoula.html
@@ -28,7 +28,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="/images/logo.png" alt="شعار الموقع">
+            <img src="./../../../images/logo.png" alt="شعار الموقع">
             <h1 class="quran-title">تلقين القرآن الكريم</h1>
         </div>
     </header>
@@ -164,6 +164,6 @@
             window.location.href = "../assanawat.html";
          }
     </script>
-    <script src="/script.js"></script>
+    <script src="./../../../script.js"></script>
 </body>
 </html>
