--- a/video/assanawat.html
+++ b/video/assanawat.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>السور</title>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-    <link rel="stylesheet" href="./style.css"> 
+    <link rel="stylesheet" href="./../style.css"> 
     <style>
         .left-section{
             padding: 10px;
@@ -23,7 +23,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="./images/logo.png" alt="شعار الموقع">
+            <img src="./../images/logo.png" alt="شعار الموقع">
             <h1 class="quran-title">تلقين القرآن الكريم</h1>
         </div>
         
