--- a/video/assanawat.html
+++ b/video/assanawat.html
@@ -46,7 +46,7 @@
     
     <script>
         function goHome() {
-            window.location.href = "./../index.html"; // استبدل بعنوان الصفحة الرئيسية
+            window.location.href = "./../../index.html"; // استبدل بعنوان الصفحة الرئيسية
         }
         function goSana1() {
              window.location.href = "./video/Ap01/videos_1ap.html";
