--- a/video/Ap01/videos_1ap.html
+++ b/video/Ap01/videos_1ap.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>فيديوهات السنة الأولى</title>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-    <link rel="stylesheet" href="./../../../style.css">
+    <link rel="stylesheet" href="./../../style.css">
     <style>
         article{
             width: 50%;
@@ -85,7 +85,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="./../../../images/logo.png" alt="شعار الموقع">
+            <img src="./../../images/logo.png" alt="شعار الموقع">
             <h1 class="quran-title">تلقين القرآن الكريم</h1>
         </div>
         <!-- <div class="left-section">
