--- a/audio/1_ap/assanawat.html
+++ b/audio/1_ap/assanawat.html
@@ -22,7 +22,7 @@
             <div class="surah" onclick="goSana1()">
                 <h2>السنة 1 إبتدائي</h2>
             </div>
-            <div class="surah" onclick="playSurah('https:\\server6.mp3quran.net/abkr/036.mp3')">
+            <div class="surah" onclick="goSana2()">
                 <h2>السنة 2 إبتدائي</h2>
             </div>
             <div class="surah" onclick="playSurah('https:\\server6.mp3quran.net/abkr/001.mp3')">
@@ -43,6 +43,9 @@
         }
         function goSana1(params) {
              window.location.href = "./suwar/suwarsanaoula.html";
+         }
+         function goSana2(params) {
+            window.location.href = "./suwar/suwarsanataniya.html";
          }
          
     </script>
