رفع الملفات الصوتية للسنة 3 والتعديل في الكود

--- a/audio/assanawat.html
+++ b/audio/assanawat.html
@@ -25,7 +25,7 @@
             <div class="surah" onclick="goSana2()">
                 <h2>السنة 2 إبتدائي</h2>
             </div>
-            <div class="surah" onclick="playSurah('https:\\server6.mp3quran.net/abkr/001.mp3')">
+            <div class="surah" onclick="goSana3()">
                 <h2>السنة 3 إبتدائي</h2>
             </div>
             <div class="surah" onclick="playSurah('https:\\server6.mp3quran.net/abkr/036.mp3')">
@@ -42,11 +42,14 @@
             window.location.href = "./../../index.html"; // استبدل بعنوان الصفحة الرئيسية
         }
         function goSana1(params) {
-             window.location.href = "./suwar/suwarsanaoula.html";
-         }
-         function goSana2(params) {
-            window.location.href = "./suwar/suwarsanataniya.html";
-         }
+             window.location.href = "./1_ap/suwarsana1.html";
+        }
+        function goSana2(params) {
+            window.location.href = "./2_ap/suwarsana2.html";
+        }
+        function goSana3(params) {
+            window.location.href = "./3_ap/suwarsana3.html";
+        }
          
     </script>
 </body>
