--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <script src="script.js"></script>
     <script>
         function goSurah() {
-    window.location.href = "./audio/1_ap/assanawat.html"; 
+    window.location.href = "./audio/assanawat.html"; 
     }
     function goSurahVidec() {
         window.location.href = "./video/assanawat.html";
