--- a/audio/assanawat.html
+++ b/audio/assanawat.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>السور</title>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-    <link rel="stylesheet" href="./../../style.css">   
+    <link rel="stylesheet" href="./../style.css">   
 </head>
 <body>
     <header>
         <div class="logo">
-            <img src="./../../images/logo.png" alt="شعار الموقع">
+            <img src="./../images/logo.png" alt="شعار الموقع">
             <h1 class="quran-title">تلقين القرآن الكريم</h1>
         </div>
         
@@ -39,7 +39,7 @@
     
     <script>
         function goHome() {
-            window.location.href = "./../../index.html"; // استبدل بعنوان الصفحة الرئيسية
+            window.location.href = "./../index.html"; // استبدل بعنوان الصفحة الرئيسية
         }
         function goSana1(params) {
              window.location.href = "./1_ap/suwarsana1.html";
