--- a/audio/2_ap/suwarsana2.html
+++ b/audio/2_ap/suwarsana2.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>السور</title>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-    <link rel="stylesheet" href="./../../../style.css">
+    <link rel="stylesheet" href="./../../style.css">
 
     <style>
         .container-end {
@@ -28,7 +28,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="./../../../images/logo.png" alt="شعار الموقع">
+            <img src="./../../images/logo.png" alt="شعار الموقع">
             <h1 class="quran-title">تلقين القرآن الكريم</h1>
         </div>
     </header>
@@ -175,12 +175,12 @@
         </div>
     <script>
         function goHome() {
-            window.location.href = "../../../index.html"; // الصفحة الرئيسية
+            window.location.href = "../../index.html"; // الصفحة الرئيسية
         }
         function goBack() {
             window.location.href = "../assanawat.html";
          }
     </script>
-    <script src="./../../../script.js"></script>
+    <script src="./../../script.js"></script>
 </body>
 </html>
