--- a/audio/assanawat.html
+++ b/audio/assanawat.html
@@ -28,7 +28,7 @@
             <div class="surah" onclick="goSana3()">
                 <h2>السنة 3 إبتدائي</h2>
             </div>
-            <div class="surah" onclick="playSurah('https:\\server6.mp3quran.net/abkr/036.mp3')">
+            <div class="surah" onclick="goSana4()">
                 <h2>السنة 4 إبتدائي</h2>
             </div>
             <div class="surah" onclick="playSurah('https:\\server6.mp3quran.net/abkr/001.mp3')">
@@ -50,7 +50,10 @@
         function goSana3(params) {
             window.location.href = "./3_ap/suwarsana3.html";
         }
-         
+        function goSana4(params) {
+            window.location.href = "./4_ap/suwarsana4.html";
+        }
+
     </script>
 </body>
 </html>
