--- a/audio/assanawat.html
+++ b/audio/assanawat.html
@@ -31,7 +31,7 @@
             <div class="surah" onclick="goSana4()">
                 <h2>السنة 4 إبتدائي</h2>
             </div>
-            <div class="surah" onclick="playSurah('https:\\server6.mp3quran.net/abkr/001.mp3')">
+            <div class="surah" onclick="goSana5()">
                 <h2>السنة 5 إبتدائي</h2>
             </div>
         </div>
@@ -52,6 +52,9 @@
         }
         function goSana4(params) {
             window.location.href = "./4_ap/suwarsana4.html";
+        }
+        function goSana5(params) {
+            window.location.href = "./5_ap/suwarsana5.html";
         }
 
     </script>
