رفع فيديوهات السنة 2 ابتدائي

--- a/video/assanawat.html
+++ b/video/assanawat.html
@@ -36,7 +36,7 @@
             <div class="surah" onclick="goSana1()">
                 <h2>السنة 1 إبتدائي</h2>
             </div>
-            <div class="surah" onclick="playSurah('https:\\server6.mp3quran.net/abkr/036.mp3')">
+            <div class="surah" onclick="goSana2()">
                 <h2>السنة 2 إبتدائي</h2>
             </div>
             <div class="surah" onclick="playSurah('https:\\server6.mp3quran.net/abkr/001.mp3')">
@@ -50,7 +50,10 @@
         }
         function goSana1() {
              window.location.href = "./../video/Ap01/videos_1ap.html";
-         }
+        }
+        function goSana2() {
+             window.location.href = "./../video/Ap02/videos_2ap.html";
+        }
          
     </script>
 </body>
