رفع فيديوهات السنة 3

--- a/video/assanawat.html
+++ b/video/assanawat.html
@@ -39,7 +39,7 @@
             <div class="surah" onclick="goSana2()">
                 <h2>السنة 2 إبتدائي</h2>
             </div>
-            <div class="surah" onclick="playSurah('https:\\server6.mp3quran.net/abkr/001.mp3')">
+            <div class="surah" onclick="goSana3()">
                 <h2>السنة 3 إبتدائي</h2>
         </div>
     </main>
@@ -53,6 +53,9 @@
         }
         function goSana2() {
              window.location.href = "./../video/Ap02/videos_2ap.html";
+        }
+        function goSana3() {
+            window.location.href = "./../video/Ap03/videos_3ap.html";
         }
          
     </script>
