--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>تلقين القرآن الكريم</title>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <link rel="stylesheet" href="./style.css">
+    <link rel="icon" href="./images/logo1.icon">
     
 </head>
 <body>
