--- a/video/Ap01/videos_1ap.html
+++ b/video/Ap01/videos_1ap.html
@@ -6,6 +6,7 @@
     <title>فيديوهات السنة الأولى</title>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <link rel="stylesheet" href="./../../style.css">
+    <link rel="icon" href="./../../images/logo1.icon">
     <style>
         article{
             width: 50%;
